--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.2.1",
     "bootswatch": "^5.2.0",
-    "next": "12.2.5",
+    "next": "^13.4.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
