--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.13.0",
     "bootstrap": "^5.2.1",
     "bootswatch": "^5.2.0",
     "next": "^13.4.0",
@@ -17,7 +18,10 @@
     "react-dom": "18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.8.0",
-    "swr": "^1.3.0"
+    "react-three-fiber": "^6.0.13",
+    "swr": "^1.3.0",
+    "three": "^0.152.2",
+    "three-gltf-loader": "^1.111.0"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
